gitops/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-spring
  labels:
    app: hello-spring
  annotations:
    kubectl.kubernetes.io/restartedAt: "2024-01-01T00:00:00Z
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-spring
  template:
    metadata:
      labels:
        app: hello-spring
    spec:
      containers:
        - name: hello-spring
          image: hello-spring:0.0.1   # overridden per overlay
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
