gitops/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-spring
spec:
  selector:
    app: hello-spring
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
