gitops/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-spring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: hello-spring.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-spring
                port:
                  number: 80
